--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 @import './styles/settings.css';
 @import './styles/variables.css';
 @import './styles/animations.css';
+@import './styles/loader.css';
 @import './styles/header.css';
 @import './styles/scrolltop.css';
