--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 @import './styles/settings.css';
 @import './styles/variables.css';
 @import './styles/animations.css';
-@import './styles/loader.css';
-@import './styles/header.css';
 @import './styles/scrolltop.css';
+
+/* Sections */
+@import './styles/sections/loader.css';
+@import './styles/sections/header.css';
+@import './styles/sections/section.css';
+@import './styles/sections/whatwedo.css';
