--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,9 @@
 @import './styles/variables.css';
 @import './styles/animations.css';
 @import './styles/scrolltop.css';
+@import './styles/loader.css';
 
 /* Sections */
-@import './styles/sections/loader.css';
 @import './styles/sections/header.css';
 @import './styles/sections/section.css';
 @import './styles/sections/whatwedo.css';
