Adds more styles and animations

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,4 +7,5 @@
 /* Sections */
 @import './styles/sections/header.css';
 @import './styles/sections/section.css';
+@import './styles/sections/best.css';
 @import './styles/sections/whatwedo.css';
