--- a/src/styles/sections/header.css
+++ b/src/styles/sections/header.css
@@ -1,7 +1,7 @@
 .header {
   font-size: 1rem;
   background-image: linear-gradient(rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 1)),
-    url('../../assets/headerbg.png');
+    url("../../assets/headerbg.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -53,7 +53,7 @@
 }
 
 .nav__menu-link::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -0.2rem;
   left: 0;
@@ -82,7 +82,7 @@
 }
 
 .nav__cta::before {
-  content: '';
+  content: "";
   position: absolute;
   height: 100%;
   width: 100%;
@@ -148,7 +148,7 @@
   }
 }
 
-@media all and (max-width: 1440px) {
+@media all and (max-width: 1441px) {
   .header {
     padding: 6rem var(--section-padding-desktop-l);
     box-shadow: inset 0 3rem rgba(0, 0, 0, 0.2);
@@ -168,13 +168,12 @@
 @media all and (max-width: 1025px) {
   .header {
     padding: 4rem var(--section-padding-desktop-s);
+    min-height: 75vh;
   }
 }
 
-@media all and (max-width: 900px) {
+@media all and (max-width: 901px) {
   .header {
-    min-height: 100vh;
-    max-height: unset;
     padding: 2rem;
     box-shadow: inset 0 1rem rgba(0, 0, 0, 0.2);
     text-align: center;
@@ -255,5 +254,11 @@
 
   .nav--open .nav__menu {
     transform: translateY(0);
+  }
+}
+
+@media all and (max-width: 600px) {
+  .header {
+    min-height: 100vh;
   }
 }
