--- a/src/styles/sections/section.css
+++ b/src/styles/sections/section.css
@@ -11,3 +11,31 @@
   font-weight: bold;
   margin-bottom: 10rem;
 }
+
+@media all and (max-width: 1601px) {
+  .section {
+    padding: 6rem var(--section-padding-desktop-l);
+  }
+}
+
+@media all and (max-width: 1441px) {
+  .section {
+    padding: 6rem var(--section-padding-desktop-m);
+  }
+}
+
+@media all and (max-width: 1025px) {
+  .section {
+    padding: 4rem var(--section-padding-tablet);
+  }
+}
+
+@media all and (max-width: 651px) {
+  .section {
+    padding: 4rem var(--section-padding-mobile);
+  }
+
+  .section__heading {
+    margin-bottom: 3rem;
+  }
+}
