--- a/src/styles/sections/header.css
+++ b/src/styles/sections/header.css
@@ -6,7 +6,7 @@
     ),
     linear-gradient(rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 1)),
     url("../../assets/headerbg.png"); */
-  background-image: url("../../assets/headerbg.png");
+  background-image: url('../../assets/headerbg.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -23,7 +23,7 @@
 }
 
 .header::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -44,6 +44,7 @@
   align-items: center;
   margin-bottom: 20rem;
   width: 100%;
+  z-index: 100;
 }
 
 .nav__logo {
@@ -77,7 +78,7 @@
 }
 
 .nav__menu-link::after {
-  content: "";
+  content: '';
   position: absolute;
   bottom: -0.2rem;
   left: 0;
@@ -106,7 +107,7 @@
 }
 
 .nav__cta::before {
-  content: "";
+  content: '';
   position: absolute;
   height: 100%;
   width: 100%;
