--- a/src/styles/scrolltop.css
+++ b/src/styles/scrolltop.css
@@ -6,6 +6,7 @@
   height: 4rem;
   background-image: var(--gradient-fancy);
   border-radius: 50%;
+  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: center;
