--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,13 @@
-@import "./styles/sections/glide.css";
-@import "./styles/settings.css";
-@import "./styles/variables.css";
-@import "./styles/animations.css";
-@import "./styles/scrolltop.css";
-@import "./styles/loader.css";
+@import './styles/sections/loadingscreen.css';
+
+@import './styles/sections/glide.css';
+@import './styles/settings.css';
+@import './styles/variables.css';
+@import './styles/animations.css';
+@import './styles/scrolltop.css';
 
 /* Sections */
-@import "./styles/sections/header.css";
-@import "./styles/sections/section.css";
-@import "./styles/sections/best.css";
-@import "./styles/sections/whatwedo.css";
+@import './styles/sections/header.css';
+@import './styles/sections/section.css';
+@import './styles/sections/best.css';
+@import './styles/sections/whatwedo.css';
