--- a/src/styles/sections/glide.css
+++ b/src/styles/sections/glide.css
@@ -1,13 +1,27 @@
 .glide {
   position: relative;
-  height: 48rem;
-  width: 20rem;
+  /* height: 48rem; */
+  /* width: 20rem; */
   font-size: 1rem;
 }
 
 .glide__track {
   height: 100%;
 }
+
+.glide__slides {
+  height: 100%;
+}
+
+.glide__slide {
+  border: 1px solid black;
+  text-align: center;
+  height: 100%;
+  position: relative;
+  z-index: 100;
+  border: none;
+}
+
 .glide__overlay {
   position: absolute;
   top: 0;
@@ -21,12 +35,14 @@
   justify-content: center;
   z-index: 10;
   text-align: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
 .glide__overlay-inner {
   background: rgba(0, 0, 0, 0.65);
   height: 100%;
-  width: 35%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,13 +62,12 @@
   font-size: 1.6em;
 }
 
-.glide__slides {
-  height: 100%;
+.glide__slide--active .glide__overlay {
+  opacity: 1;
 }
 
-.glide__slide {
-  border: 1px solid black;
-  text-align: center;
+.glide__slide-image {
+  width: 100%;
   height: 100%;
 }
 
