--- a/src/styles/sections/loadingscreen.css
+++ b/src/styles/sections/loadingscreen.css
@@ -50,7 +50,7 @@
 .loader-wrapper {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: #333;
@@ -59,6 +59,17 @@
   align-items: center;
   z-index: 100;
   transition: opacity 1s 0.5s ease;
+  overflow: hidden;
+}
+
+.content {
+  opacity: 1;
+  transition: opacity 0.5s 0.5s ease;
+}
+
+.content--hide {
+  /* display: none; */
+  opacity: 0;
 }
 
 .loader-wrapper--faded {
@@ -69,8 +80,8 @@
 
 .loader {
   display: inline-block;
-  width: 30px;
-  height: 30px;
+  width: 60px;
+  height: 60px;
   position: relative;
   border: 4px solid #fff;
   animation: loader 2s infinite ease;
