--- a/src/styles/sections/header.css
+++ b/src/styles/sections/header.css
@@ -1,11 +1,5 @@
 .header {
   font-size: 1rem;
-  /* background-image: linear-gradient(
-      rgba(255, 255, 255, 1),
-      rgba(0, 0, 0, 0) 50%
-    ),
-    linear-gradient(rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 1)),
-    url("../../assets/headerbg.png"); */
   background-image: url('../../assets/headerbg.png');
   background-repeat: no-repeat;
   background-size: cover;
@@ -186,14 +180,18 @@
 
 @media all and (max-width: 1367px) {
   .header__cta {
-    margin-bottom: 16rem;
+    margin-bottom: 15rem;
   }
 }
 
 @media all and (max-width: 1025px) {
   .header {
     padding: 4rem var(--section-padding-desktop-s);
-    min-height: 75vh;
+    min-height: 65vh;
+  }
+
+  .header__cta {
+    margin-bottom: 30rem;
   }
 }
 
