--- a/src/styles/sections/whatwedo.css
+++ b/src/styles/sections/whatwedo.css
@@ -4,6 +4,7 @@
   list-style-type: none;
   gap: 100px;
   font-size: 1rem;
+  margin-bottom: 12rem;
 }
 
 .whatwedo__item {
@@ -57,6 +58,7 @@
   .whatwedo__item-list {
     grid-template-columns: 1fr;
     gap: 0;
+    margin-bottom: 2rem;
   }
 
   .whatwedo__item {
