--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
 @import './styles/sections/loadingscreen.css';
 
-@import './styles/sections/glide.css';
 @import './styles/settings.css';
 @import './styles/variables.css';
 @import './styles/animations.css';
@@ -11,3 +10,5 @@
 @import './styles/sections/section.css';
 @import './styles/sections/best.css';
 @import './styles/sections/whatwedo.css';
+@import './styles/sections/glide.css';
+@import './styles/sections/about.css';
