--- a/src/styles/sections/header.css
+++ b/src/styles/sections/header.css
@@ -2,6 +2,7 @@
   font-size: 1rem;
   background-image: url('../../assets/headerbg.png');
   background-repeat: no-repeat;
+  background-position: center center;
   background-size: cover;
   background-attachment: fixed;
   padding: 10rem var(--section-padding-desktop-xl);
