--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,5 @@
 @import './styles/sections/whatwedo.css';
 @import './styles/sections/glide.css';
 @import './styles/sections/about.css';
+@import './styles/sections/map.css';
+@import './styles/sections/footer.css';
