--- a/src/styles/sections/header.css
+++ b/src/styles/sections/header.css
@@ -10,7 +10,8 @@
   flex-direction: column;
   align-items: center;
   box-shadow: inset 0 6rem rgba(0, 0, 0, 0.2);
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  height: 100vh;
 
   z-index: 1;
 
@@ -138,15 +139,14 @@
   margin-bottom: 5rem;
 }
 
-.header__cta {
-  margin-bottom: 40rem;
-}
-
 .header__scrolldown-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  position: absolute;
+  bottom: 2rem;
 }
 
 .header__scrolldown-mouse {
@@ -163,9 +163,6 @@
   .nav {
     margin-bottom: 15rem;
   }
-  .header__cta {
-    margin-bottom: 30rem;
-  }
 }
 
 @media all and (max-width: 1441px) {
@@ -179,12 +176,6 @@
   }
 }
 
-@media all and (max-width: 1367px) {
-  .header__cta {
-    margin-bottom: 15rem;
-  }
-}
-
 @media all and (max-width: 1200px) {
   .header {
     padding: 4rem var(--section-padding-desktop-s);
@@ -194,11 +185,6 @@
 @media all and (max-width: 1025px) {
   .header {
     padding: 4rem var(--section-padding-desktop-s);
-    min-height: 65vh;
-  }
-
-  .header__cta {
-    margin-bottom: 30rem;
   }
 }
 
@@ -293,8 +279,8 @@
   }
 }
 
-@media all and (max-width: 500px) {
-  .header__cta {
-    margin-bottom: 10rem;
+@media all and (max-width: 400px) {
+  .header {
+    padding: 2rem 1rem;
   }
 }
