--- a/src/styles/sections/header.css
+++ b/src/styles/sections/header.css
@@ -1,6 +1,6 @@
 .header {
   font-size: 1rem;
-  background-image: url('../../assets/headerbg.png');
+  background-image: url("../../assets/headerbg.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -19,7 +19,7 @@
 }
 
 .header::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -74,7 +74,7 @@
 }
 
 .nav__menu-link::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -0.2rem;
   left: 0;
@@ -103,7 +103,7 @@
 }
 
 .nav__cta::before {
-  content: '';
+  content: "";
   position: absolute;
   height: 100%;
   width: 100%;
@@ -144,6 +144,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
 
   position: absolute;
   bottom: 2rem;
