--- a/src/styles/wga.css
+++ b/src/styles/wga.css
@@ -14,6 +14,12 @@
   z-index: 1000000;
 }
 
+@media all and (max-width: 1000px) {
+  .wgatoggler {
+    display: none;
+  }
+}
+
 .wga-bar {
   display: none;
   background: var(--bg-color);
