--- a/src/styles/wga.css
+++ b/src/styles/wga.css
@@ -14,14 +14,12 @@
   z-index: 1000000;
 }
 
-@media all and (max-width: 1000px) {
-  .wgatoggler {
-    display: none;
-  }
-}
-
 .wga-bar {
   display: none;
+}
+
+.content--wga .wga-bar {
+  display: flex;
   background: var(--bg-color);
   color: var(--main-color);
   height: var(--wga-bar-height);
@@ -29,6 +27,41 @@
 
   justify-content: space-around;
   align-items: center;
+  z-index: 999;
+}
+
+@media all and (max-width: 800px) {
+  .content .header {
+    padding-top: 35vh;
+    min-height: 135vh;
+  }
+  .content--wga .wga-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 30vh;
+
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .content .header {
+    padding-top: 65vh;
+    min-height: 165vh;
+  }
+  .content--wga .wga-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60vh;
+
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .wga-bar__button {
